--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "react-cl-audio-player": "^1.0.0",
+    "react-sound": "^0.5.2",
     "react-soundplayer": "^0.3.6",
     "scrollreveal": "^3.3.4",
     "soundcloud-audio": "^1.1.0"
